--- a/index.html
+++ b/index.html
@@ -192,7 +192,29 @@
         { name: 'Sydney Biennale', url: 'https://www.biennaleofsydney.art', desc: 'Australia' },
         { name: 'Paris Photo', url: 'https://www.parisphoto.com', desc: 'Major photo fair & competition' },
         { name: 'International Sculpture Center', url: 'https://www.sculpture.org', desc: 'Global sculpture opportunities' }
-      ]
+      ],
+      instagram: {
+        hashtags: [
+          { tag: '#callforartists', desc: 'Primary hashtag for open calls' },
+          { tag: '#opencall', desc: 'General opportunities tag' },
+          { tag: '#artcompetition', desc: 'Competitions and awards' },
+          { tag: '#publicartcall', desc: 'Public art RFPs' },
+          { tag: '#artopportunity', desc: 'Broad opportunities' },
+          { tag: '#callforentry', desc: 'Gallery and exhibition calls' },
+          { tag: '#artistcall', desc: 'General artist opportunities' },
+          { tag: '#artsubmissions', desc: 'Submission deadlines' }
+        ],
+        accounts: [
+          { handle: '@seattlearts', desc: 'Seattle Office of Arts & Culture' },
+          { handle: '@4culture', desc: 'King County cultural funding' },
+          { handle: '@artisttrust', desc: 'Washington State fellowships' },
+          { handle: '@callforartists', desc: 'Curated opportunities feed' },
+          { handle: '@artworkarchive', desc: 'Opportunities aggregator' },
+          { handle: '@publicartists', desc: 'Public art opportunities' },
+          { handle: '@lensculture', desc: 'Photography calls' },
+          { handle: '@photographerswithoutborders', desc: 'Photo exhibitions & grants' }
+        ]
+      }
     };
 
     function ArtSubmissionsApp() {
@@ -466,6 +488,58 @@
                           <div className="text-xs text-zinc-500">{resource.desc}</div>
                         </a>
                       ))}
+                    </div>
+                  </div>
+
+                  <div className="lg:col-span-3 border-t border-zinc-200 pt-8 mt-8">
+                    <h3 className="font-semibold text-zinc-900 mb-4 flex items-center gap-2">
+                      <MapPin size={16} className="text-zinc-500" />
+                      Instagram (Manual Monitoring)
+                    </h3>
+                    <p className="text-sm text-zinc-600 mb-6">
+                      Instagram can't be scraped automatically, but these hashtags and accounts are valuable for finding opportunities early.
+                    </p>
+                    
+                    <div className="grid grid-cols-1 md:grid-cols-2 gap-8">
+                      <div>
+                        <h4 className="text-sm font-medium text-zinc-700 mb-3">Key Hashtags to Follow</h4>
+                        <div className="space-y-2">
+                          {RESOURCES.instagram.hashtags.map((item, idx) => (
+                            <a
+                              key={idx}
+                              href={`https://www.instagram.com/explore/tags/${item.tag.substring(1)}/`}
+                              target="_blank"
+                              rel="noopener noreferrer"
+                              className="block group"
+                            >
+                              <div className="text-sm font-medium text-zinc-900 group-hover:text-zinc-600">
+                                {item.tag} <ExternalLink size={12} className="inline" />
+                              </div>
+                              <div className="text-xs text-zinc-500">{item.desc}</div>
+                            </a>
+                          ))}
+                        </div>
+                      </div>
+                      
+                      <div>
+                        <h4 className="text-sm font-medium text-zinc-700 mb-3">Accounts to Follow</h4>
+                        <div className="space-y-2">
+                          {RESOURCES.instagram.accounts.map((item, idx) => (
+                            <a
+                              key={idx}
+                              href={`https://www.instagram.com/${item.handle.substring(1)}/`}
+                              target="_blank"
+                              rel="noopener noreferrer"
+                              className="block group"
+                            >
+                              <div className="text-sm font-medium text-zinc-900 group-hover:text-zinc-600">
+                                {item.handle} <ExternalLink size={12} className="inline" />
+                              </div>
+                              <div className="text-xs text-zinc-500">{item.desc}</div>
+                            </a>
+                          ))}
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
