--- a/art/catalog.html
+++ b/art/catalog.html
@@ -144,8 +144,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="{header_logo}" alt="John Woodruff" class="logo">
-            <img src="{header_title}" alt="Available Works" class="title">
+            <img src="page-header-assets/logo.png" alt="John Woodruff" class="logo">
+            <img src="page-header-assets/available-works.png" alt="Available Works" class="title">
         </div>
         <div class="grid">
             <div class="artwork-card">
