--- a/art/currently-showing.html
+++ b/art/currently-showing.html
@@ -150,6 +150,45 @@
         <div class="grid">
             <div class="artwork-card">
                 <div class="artwork-image">
+                    <img src="images/1fdfd2640533.png" alt="Form Type, No. 01">
+                </div>
+                <div class="artwork-info">
+                    <div class="artwork-title">Form Type, No. 01</div>
+                    <div class="artwork-meta">
+                        <div class="inv-number">FOTY01</div>
+                        <div><strong>Series:</strong> Form Type</div>
+                        <div><strong>Year:</strong> 2025</div>
+                        <div><strong>Image:</strong> 36 x 48"</div>
+                        <div style="margin-top: 10px; font-size: 0.85rem; line-height: 1.5;">Reactive dye print on hemp/tencel, acrylic, mounted on Dibond</div>
+                        <div><strong>Medium:</strong> Photography</div>
+                        <div class="price">$1200</div>
+                        <a href="mailto:jofowood@gmail.com?subject=Inquiry%3A%20Form%20Type%2C%20No.%2001%20%28FOTY01%29&body=I%27m%20interested%20in%20the%20following%20artwork%3A%0A%0ATitle%3A%20Form%20Type%2C%20No.%2001%0AInventory%3A%20FOTY01%0ASeries%3A%20Form%20Type%0AYear%3A%202025%0AImage%20Size%3A%2036%20x%2048%22%0A%0ADetails%3A%20Reactive%20dye%20print%20on%20hemp/tencel%2C%20acrylic%2C%20mounted%20on%20Dibond%0AMedium%3A%20Photography%0A%0APrice%3A%20%241200%0A" class="inquire-btn">Inquire</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexuq8vTsj5KrOr4trdD1vFrIVnS31sMlGT8sQB_Egc3Idag/viewform?entry.370646706=Form%20Type%2C%20No.%2001&entry.673557102=https%3A//jofowood.github.io/art/art/images/1fdfd2640533.png" class="inquire-btn" target="_blank">Purchase Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="artwork-card">
+                <div class="artwork-image">
+                    <img src="images/cde5638a9978.png" alt="Form Type, No. 02">
+                </div>
+                <div class="artwork-info">
+                    <div class="artwork-title">Form Type, No. 02</div>
+                    <div class="artwork-meta">
+                        <div class="inv-number">FOTY02</div>
+                        <div><strong>Series:</strong> Form Type</div>
+                        <div><strong>Year:</strong> 2025</div>
+                        <div><strong>Edition:</strong> Unique Piece</div>
+                        <div><strong>Image:</strong> 36 x 48"</div>
+                        <div style="margin-top: 10px; font-size: 0.85rem; line-height: 1.5;">Reactive dye print on hemp/tencel, acrylic, mounted on Dibond</div>
+                        <div><strong>Medium:</strong> Photography</div>
+                        <div class="price">$1200</div>
+                        <a href="mailto:jofowood@gmail.com?subject=Inquiry%3A%20Form%20Type%2C%20No.%2002%20%28FOTY02%29&body=I%27m%20interested%20in%20the%20following%20artwork%3A%0A%0ATitle%3A%20Form%20Type%2C%20No.%2002%0AInventory%3A%20FOTY02%0ASeries%3A%20Form%20Type%0AYear%3A%202025%0AEdition%3A%20Unique%20Piece%0AImage%20Size%3A%2036%20x%2048%22%0A%0ADetails%3A%20Reactive%20dye%20print%20on%20hemp/tencel%2C%20acrylic%2C%20mounted%20on%20Dibond%0AMedium%3A%20Photography%0A%0APrice%3A%20%241200%0A" class="inquire-btn">Inquire</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexuq8vTsj5KrOr4trdD1vFrIVnS31sMlGT8sQB_Egc3Idag/viewform?entry.370646706=Form%20Type%2C%20No.%2002&entry.673557102=https%3A//jofowood.github.io/art/art/images/cde5638a9978.png" class="inquire-btn" target="_blank">Purchase Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="artwork-card">
+                <div class="artwork-image">
                     <img src="images/8200a26f35fc.jpg" alt="Break & Habit, No. 02, Detail 03">
                 </div>
                 <div class="artwork-info">
@@ -224,6 +263,26 @@
                         <div class="price">$550</div>
                         <a href="mailto:jofowood@gmail.com?subject=Inquiry%3A%20Habit%20Pattern%2C%20No.%2015%20%28green%29%20%28HAPA15%29&body=I%27m%20interested%20in%20the%20following%20artwork%3A%0A%0ATitle%3A%20Habit%20Pattern%2C%20No.%2015%20%28green%29%0AInventory%3A%20HAPA15%0ASeries%3A%20Habit%20Pattern%0AYear%3A%202025%0AImage%20Size%3A%2018.5%20x%2012%22%0A%0ADetails%3A%20Archival%20pigment%20print%20mounted%20on%20panel%0AMedium%3A%20Photography%0A%0APrice%3A%20%24550%0A" class="inquire-btn">Inquire</a>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexuq8vTsj5KrOr4trdD1vFrIVnS31sMlGT8sQB_Egc3Idag/viewform?entry.370646706=Habit%20Pattern%2C%20No.%2015%20%28green%29&entry.673557102=https%3A//jofowood.github.io/art/art/images/08e3f4f491f5.jpg" class="inquire-btn" target="_blank">Purchase Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="artwork-card">
+                <div class="artwork-image">
+                    <img src="images/fc2864891bf8.jpg" alt="Habit Pattern, No. 20">
+                </div>
+                <div class="artwork-info">
+                    <div class="artwork-title">Habit Pattern, No. 20</div>
+                    <div class="artwork-meta">
+                        <div class="inv-number">HAPA20</div>
+                        <div><strong>Series:</strong> Habit Pattern</div>
+                        <div><strong>Year:</strong> 2025</div>
+                        <div><strong>Edition:</strong> #1/5</div>
+                        <div><strong>Image:</strong> 6 x 81"</div>
+                        <div style="margin-top: 10px; font-size: 0.85rem; line-height: 1.5;">Archival pigment print mounted on dibond</div>
+                        <div><strong>Medium:</strong> Photography</div>
+                        <div class="price">$1200</div>
+                        <a href="mailto:jofowood@gmail.com?subject=Inquiry%3A%20Habit%20Pattern%2C%20No.%2020%20%28HAPA20%29&body=I%27m%20interested%20in%20the%20following%20artwork%3A%0A%0ATitle%3A%20Habit%20Pattern%2C%20No.%2020%0AInventory%3A%20HAPA20%0ASeries%3A%20Habit%20Pattern%0AYear%3A%202025%0AEdition%3A%20%231/5%0AImage%20Size%3A%206%20x%2081%22%0A%0ADetails%3A%20Archival%20pigment%20print%20mounted%20on%20dibond%0AMedium%3A%20Photography%0A%0APrice%3A%20%241200%0A" class="inquire-btn">Inquire</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexuq8vTsj5KrOr4trdD1vFrIVnS31sMlGT8sQB_Egc3Idag/viewform?entry.370646706=Habit%20Pattern%2C%20No.%2020&entry.673557102=https%3A//jofowood.github.io/art/art/images/fc2864891bf8.jpg" class="inquire-btn" target="_blank">Purchase Info</a>
                     </div>
                 </div>
             </div>
